@@ -1,3 +1,8 @@
+2013-01-22  Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* libc/include/pthread.h: Add PTHREAD_RWLOCK_INITIALIZER.
+	Fix typo on PTHREAD_COJND_INITIALIZER.
+
 2013-01-17  Marcus Shawcroft  <marcus.shawcroft@linaro.org>
 
 	* libc/machine/aarch64/strncmp.S: Correct arithmetic for
